--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,10 @@ concurrency:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    # Added environment property to fix the 400 error
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -25,7 +29,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          # Removed cache: 'npm' because it requires a package-lock.json which is not present.
 
       - name: Install dependencies
         run: npm install
@@ -33,7 +36,6 @@ jobs:
       - name: Build
         run: npm run build
         env:
-          # For future use if you add Gemini API features
           API_KEY: ${{ secrets.API_KEY }}
 
       - name: Setup Pages
